test/files/invalid/struct_self_reference.fbs
struct Foo {
  x: uint64;
  y: Foo;
}
